# Arkalia-aria

./: .bandit  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  404.html  AUDIT_COMPLET_ARKALIA_ARIA.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN_AMELIORATION_ARKALIA_ARIA.md  README.md  aria_pain.db-journal  bandit-report.json  coverage.json  docker-compose.yml  env.example  index.html  main.py  mkdocs.yml  monitoring.json  pyproject.toml  requirements.txt  sitemap.xml
.github/: README.md
.github/workflows/: ci-cd.yml  deploy-docs.yml  docs.yml  gh-pages.yml  security.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+224 more)
API_REFERENCE/: index.html
AUDIT_ARIA_12_DECEMBRE_2025/: index.html
AUDIT_COMPLET_ARIA/: index.html
AUDIT_PROJECT/: index.html
CE_QUI_MANQUE_ARIA/: index.html
CONFIGURATION_GUIDE/: index.html
COOKIES_POLICY/: index.html
CORRECTIONS_NECESSAIRES_ARIA/: index.html
DAILY_CLOSING_CHECKLIST/: index.html
DASHBOARD_WEB/: index.html
DEVELOPER_GUIDE/: index.html
DPO_CONTACT/: index.html
ETAT_ACTUEL_27_NOV/: index.html
GITHUB_PAGES_SETUP/: index.html
HEALTH_CONNECTORS/: index.html
LEGAL_MENTIONS/: index.html
MOBILE_APP/: index.html
PRIVACY_POLICY/: index.html
PROFESSIONAL_WORKFLOW/: index.html
PROJECT_STATUS/: index.html
QUICK_COMMANDS/: index.html
RELEASE_GUIDE/: index.html
RESUME_AMELIORATIONS/: index.html
STATUT_IMPLEMENTATION_ARIA/: index.html
SYNTHESE_CE_QUI_MANQUE_12_DEC_2025/: index.html
TACHES_RESTANTES_12_DEC_2025/: index.html
TERMS_OF_USE/: index.html
TESTER_GUIDE/: index.html
USER_GUIDE/: index.html
VALIDATION_CHECKLIST/: index.html
alerts/: __init__.py  api.py
audio_voice/: __init__.py  api.py
cia_compatibility/: __init__.py  api.py
cia_sync/: __init__.py  api.py  auto_sync.py  bbia_api.py  bbia_integration.py  document_integration.py  granularity_config.py
config/: .bandit  .safety  README.md  deployment.json  nginx.conf  performance.toml
core/: __init__.py  alerts.py  api_base.py  cache.py  config.py  database.py  exceptions.py  logging.py
dacc/: test_dashboard.html  test_devops_light.py  test_devops_simple.py  test_devops_system.py  test_final.py  test_integration.py  test_metrics_system.py
dacc/google_fit_data/: activity_2025-08-25.json  activity_2025-08-26.json  activity_2025-08-27.json  activity_2025-08-28.json  activity_2025-08-29.json  activity_2025-08-30.json  activity_2025-08-31.json  activity_2025-09-01.json  activity_2025-09-02.json  activity_2025-09-03.json  activity_2025-09-04.json  activity_2025-09-05.json  activity_2025-09-06.json  activity_2025-09-07.json  activity_2025-09-08.json  activity_2025-09-09.json  activity_2025-09-10.json  activity_2025-09-11.json  activity_2025-09-12.json  activity_2025-09-13.json  activity_2025-09-14.json  activity_2025-09-15.json  activity_2025-09-16.json  activity_2025-09-17.json  activity_2025-09-18.json  activity_2025-09-19.json  activity_2025-09-20.json  activity_2025-09-21.json  activity_2025-09-22.json  activity_2025-09-23.json  activity_2025-09-24.json  health_2025-09-17.json  health_2025-09-18.json  health_2025-09-19.json  health_2025-09-20.json  health_2025-09-21.json  (+65 more)
devops_automation/: __init__.py  api.py
docs/: ACCOMPLISHMENTS_SUMMARY.md  ACTION_PLAN.md  AI_MIGRATION_GUIDE.md  API_REFERENCE.md  AUDIT_ARIA_12_DECEMBRE_2025.md  AUDIT_COMPLET_ARIA.md  AUDIT_PROJECT.md  AUDIT_RESPONSE_CEO.md  CE_QUI_MANQUE_ARIA.md  CI_CD_AUTO_GENERATION.md  CONFIGURATION_GUIDE.md  COOKIES_POLICY.md  CORRECTIONS_NECESSAIRES_ARIA.md  DAILY_CLOSING_CHECKLIST.md  DAILY_LOG.md  DASHBOARD_WEB.md  DEVELOPER_GUIDE.md  DOCUMENTATION_COMPLETE.md  DPO_CONTACT.md  ETAT_ACTUEL_27_NOV.md  EXAMPLES.md  FINAL_SUMMARY.md  GITHUB_PAGES_SETUP.md  HEALTH_CONNECTORS.md  LEGAL_MENTIONS.md  MISSION_ACCOMPLISHED.md  MOBILE_APP.md  MODULE_STATUS.md  PLAN_AMELIORATION_ARKALIA_ARIA.md  PRIVACY_POLICY.md  PROFESSIONAL_WORKFLOW.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  RELEASE_GUIDE.md  RESUME_AMELIORATIONS.md  SECURITY_RGPD_CHECKLIST.md  SOLO_WORKFLOW.md  STATUT_IMPLEMENTATION_ARIA.md  SYNTHESE_CE_QUI_MANQUE_12_DEC_2025.md  (+8 more)
health_connectors/: api.py  auto_export.py  base_connector.py  config.py  data_models.py  google_fit_connector.py  ios_health_connector.py  report_generator.py  samsung_health_connector.py  sync_manager.py
metrics_collector/: __init__.py  api.py  cli.py
mobile_app/: .flutter-plugins-dependencies  README.md  pubspec.yaml
pain_tracking/: __init__.py  api.py
pattern_analysis/: __init__.py  api.py  correlation_analyzer.py  emotion_analyzer.py
prediction_engine/: __init__.py  api.py  ml_analyzer.py
research_tools/: __init__.py  api.py  data_collector.py
scripts/: daily_closing.sh  emergency_ram_cleanup.sh  monitor_heavy_processes.sh  optimize_development.sh  run_tests_optimized.sh
search/: search_index.json
tests/: README.md  __init__.py  test_alerts.py  test_cia_compatibility.py  test_dashboard_web.py  test_health_api.py  test_health_connectors.py  test_improvements.py  test_integration.py  test_metrics_collector.py
watch_integration/: __init__.py  api.py  data_models.py  ios_health_connector.py  samsung_health_connector.py
(+2070 files in other folders)
