[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkalia-aria"
version = "1.0.0"
description = "Research Intelligence Assistant - Laboratoire de recherche santé personnel"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arkalia Luna System", email = "arkalia.luna.system@gmail.com"}
]
maintainers = [
    {name = "Arkalia Luna System", email = "arkalia.luna.system@gmail.com"}
]
keywords = ["health", "research", "pain-tracking", "ai", "medical", "personal-lab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pre-commit>=3.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.28.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-git-revision-date-plugin>=1.2.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pip-audit>=2.0.0",
    "semgrep>=1.0.0",
]

[project.scripts]
aria = "main:main"
aria-cli = "main:cli"

[project.urls]
Homepage = "https://github.com/arkalia-luna-system/arkalia-aria"
Documentation = "https://arkalia-luna-system.github.io/arkalia-aria/"
Repository = "https://github.com/arkalia-luna-system/arkalia-aria"
"Bug Tracker" = "https://github.com/arkalia-luna-system/arkalia-aria/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["*._*", "*.DS_Store", "._*", "**/._*", "**/*._*", "tests*", "docs*"]

[tool.setuptools.exclude-package-data]
"*" = ["*._*", "*.DS_Store", "._*", "**/._*", "**/*._*"]

# Configuration pytest unifiée et moderne
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", "archive", "backups", "logs", ".venv", "venv", "__pycache__", "arkalia_aria_venv"]
minversion = "6.0"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    # "--cache-clear",  # DÉSACTIVÉ - évite de relancer les tests automatiquement
    "--import-mode=importlib",
    "--maxfail=10",
    "--durations=10",
    "-x",  # Arrêter au premier échec pour économiser RAM
    "--no-cov",  # Désactiver coverage par défaut (économise beaucoup de RAM)
]
markers = [
    "fast: marks tests as fast (deselect with '-m \"not fast\"')",
    "medium: marks tests as medium speed (deselect with '-m \"not medium\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as asyncio tests",
    "security: marks tests as security tests",
    "timeout: marks tests with timeout",
    "no_cov: marks tests that should not use coverage",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | arkalia_aria_venv
  | build
  | dist
  | archive
  | backups
  | logs
)/
'''
preview = true

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".venv",
    "venv",
    "arkalia_aria_venv",
    "dacc",
    "archive",
    "backups", 
    "logs",
    "__pycache__",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
    "._*",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E722",  # do not use bare except
    "W293",  # blank line contains whitespace (tolerated in large HTML strings)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = false
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
exclude = [
    "tests/",
    "archive/",
    "backups/",
    "logs/",
    ".venv/",
    "venv/",
    "arkalia_aria_venv/",
]
[[tool.mypy.overrides]]
module = ["yaml", "requests"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["arkalia_aria"]
known_third_party = [
    "fastapi", "uvicorn", "pydantic", "requests", "pytest", "black", "ruff", "mypy"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip = [".venv", "venv", "arkalia_aria_venv", "archive", "backups", "logs", "__pycache__", ".git"]
force_sort_within_sections = true
lines_after_imports = 2

[tool.bandit]
# Exclusions de répertoires pour réduire la charge CPU/RAM
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    "arkalia_aria_venv",
    "archive",
    "backups",
    "logs",
    "dacc",
    "mobile_app",
    "metrics_reports",
    "reports",
    "deployments",
    "docs",
    "__pycache__",
    ".git",
    ".pytest_cache",
    "htmlcov",
    "build",
    "dist",
    ".mypy_cache",
]
# Exclusions de fichiers pour éviter les scans inutiles
exclude = [
    "pyproject.toml",
    "*.toml",
    "*.yaml",
    "*.yml",
    "*.json",
    "*.md",
    "*.db",
    "*.sqlite",
    "*.sqlite3",
    "*.iml",
    "*.dart",
    "*.xml",
    "*.png",
    "*.jpg",
    "*.jpeg",
    "._*",  # Fichiers macOS cachés
    "**/._*",  # Fichiers macOS cachés récursifs
]
# Tests de sécurité à ignorer (faux positifs courants)
skips = ["B101", "B105", "B108", "B311", "B601", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610"]
# Cibler uniquement le code source Python
targets = ["core", "health_connectors", "metrics_collector", "pain_tracking", "pattern_analysis", "prediction_engine", "research_tools", "devops_automation", "audio_voice", "cia_sync"]
recursive = true
# Désactiver verbose pour économiser la RAM
verbose = false
output_format = "json"
output_file = "bandit-report.json"
# Limiter le nombre de fichiers scannés (sécurité)
# Note: bandit ne supporte pas directement cette option, mais on limite via targets

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/arkalia_aria_venv/*",
    "*/archive/*",
    "*/backups/*",
    "*/logs/*",
    "*/htmlcov/*",
    "main.py",
]
branch = true
relative_files = true
data_file = ".coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
